<resources>
    <string name="app_name">The First Market</string>
    <string name="_91">+91</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="login">Login</string>
    <string name="orders">Orders</string>
    <string name="profile">Profile</string>
    <string name="about">About</string>
    <string name="terms">Terms</string>
    <string name="logout">Logout</string>
    <string name="milk">Milk</string>
    <string name="grocery">Grocery</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="user_name">User Name</string>
    <string name="otp">OTP</string>
    <string name="done">Done</string>
    <string name="verfying_otp_please_wait">Verfying OTP. Please Wait...</string>
    <string name="upcoming">Upcoming</string>
    <string name="history">History</string>
    <string name="modify">Modify</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="am">AM</string>
    <string name="pm">PM</string>
    <string name="Rs">\u20B9</string>
    <string name="call">Call</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="minus">-</string>
    <string name="total">Total</string>
    <string name="next">Next</string>
    <string name="qty">Qty</string>
    <string name="_0_25">0.25</string>
    <string name="_0_5">0.5</string>
    <string name="_1">1</string>
    <string name="skip">Skip</string>
    <string name="updating_please_wait">Updating. Please Wait...</string>
    <string name="cancel">Cancel</string>
    <string name="grocery_history">Grocery History</string>
    <string name="remove">Remove</string>
    <string name="updating">Updating...</string>
    <string name="product_name">Product Name</string>
    <string name="price">Price</string>
    <string name="ok">OK</string>
    <string name="am_bill_details">AM Bill Details</string>
    <string name="pm_bill_details">PM Bill Details</string>
    <string name="sales_report">Sales Report</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="confirm">Confirm</string>
    <string name="order_confirmation">Order Confirmation</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="carrot">Carrot</string>
    <string name="demo_rate">\u20B9 40/- 1 KG</string>
    <string name="demo_price_1">\u20B9 40/- for 1 KG</string>
    <string name="demo_price_2">\u20B9 80/- for 2 KG</string>
</resources>
