<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_margin="@dimen/pad_10"
        app:cardCornerRadius="@dimen/pad_10">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <in.inferon.msl.cucumbor.view.ui.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modify"
                android:textSize="@dimen/text_18sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/dialog_toolbar_bg"
                android:padding="@dimen/pad_10"/>

        <in.inferon.msl.cucumbor.view.ui.BoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qty"
                android:textSize="@dimen/text_20sp"
                android:textColor="@color/colorPrimary"
                android:gravity="center"
                android:layout_marginTop="@dimen/pad_20"/>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:background="@drawable/dialog_milk_qty_layout_bg"
                android:layout_margin="@dimen/pad_10">
            <in.inferon.msl.cucumbor.view.ui.BoldTextView
                    android:id="@+id/qtyMinusTV"
                    android:layout_width="@dimen/pad_50"
                    android:layout_height="@dimen/pad_40"
                    android:text="@string/minus"
                    android:textSize="@dimen/text_18sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
            <View
                    android:layout_width="@dimen/pad_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"/>
            <in.inferon.msl.cucumbor.view.ui.BoldEditText
                    android:id="@+id/qty_et"
                    android:layout_width="@dimen/pad_100"
                    android:layout_height="@dimen/pad_40"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/black"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:background="@drawable/qty_et_bg"
                    android:padding="@dimen/pad_10"
                    android:gravity="center"/>
            <View
                    android:layout_width="@dimen/pad_1"
                    android:layout_height="match_parent"
                    android:background="@color/colorPrimary"/>
            <in.inferon.msl.cucumbor.view.ui.BoldTextView
                    android:id="@+id/qtyPlusTV"
                    android:layout_width="@dimen/pad_50"
                    android:layout_height="@dimen/pad_40"
                    android:text="@string/plus"
                    android:textSize="@dimen/text_18sp"
                    android:textColor="@color/black"
                    android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/pad_10">
            <in.inferon.msl.cucumbor.view.ui.BoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_25"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <in.inferon.msl.cucumbor.view.ui.BoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_0_5"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_weight="1"/>
            <in.inferon.msl.cucumbor.view.ui.BoldTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_1"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/gray"
                    android:gravity="center"
                    android:layout_weight="1"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginLeft="@dimen/pad_10"
                android:layout_marginRight="@dimen/pad_10">
            <in.inferon.msl.cucumbor.view.ui.BoldEditText
                    android:id="@+id/quaterET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/edit_tx_bg"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:padding="@dimen/pad_10"
                    android:layout_margin="@dimen/pad_5"
                    android:imeOptions="actionDone"/>
            <in.inferon.msl.cucumbor.view.ui.BoldEditText
                    android:id="@+id/halfET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/edit_tx_bg"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:padding="@dimen/pad_10"
                    android:layout_margin="@dimen/pad_5"
                    android:imeOptions="actionDone"/>
            <in.inferon.msl.cucumbor.view.ui.BoldEditText
                    android:id="@+id/fullET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/black"
                    android:gravity="center"
                    android:background="@drawable/edit_tx_bg"
                    android:layout_weight="1"
                    android:inputType="number"
                    android:padding="@dimen/pad_10"
                    android:layout_margin="@dimen/pad_5"
                    android:imeOptions="actionDone"/>
        </LinearLayout>

        <in.inferon.msl.cucumbor.view.ui.BoldSwitch
                android:id="@+id/skipSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/skip"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/colorPrimary"
                android:padding="@dimen/pad_10"
                android:layout_gravity="center"/>

        <LinearLayout
                android:id="@+id/loadingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/pad_10">
            <ProgressBar
                    android:layout_width="@dimen/pad_20"
                    android:layout_height="@dimen/pad_20"/>

            <in.inferon.msl.cucumbor.view.ui.LightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/updating_please_wait"
                    android:textSize="@dimen/text_12sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="@dimen/pad_10"
                    android:layout_marginStart="@dimen/pad_10"/>
        </LinearLayout>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_margin="@dimen/pad_10">
            <in.inferon.msl.cucumbor.view.ui.BoldButton
                    android:id="@+id/cancel_bt"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/cancel_bt_color"
                    android:background="@drawable/cancel_bt_bg"
                    android:layout_weight="1"
                    android:layout_marginRight="@dimen/pad_10"
                    android:layout_marginEnd="@dimen/pad_10"/>

            <in.inferon.msl.cucumbor.view.ui.BoldButton
                    android:id="@+id/done_bt"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/white"
                    android:background="@drawable/done_bt_bg"
                    android:layout_weight="1"
                    android:layout_marginLeft="@dimen/pad_10"
                    android:layout_marginStart="@dimen/pad_10"/>
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>