<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:padding="@dimen/pad_10"
                tools:context=".view.activity.LoginActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/title"
                android:adjustViewBounds="true"
                android:layout_marginLeft="@dimen/pad_20"
                android:layout_marginRight="@dimen/pad_20"
                android:contentDescription="@string/app_name"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="@drawable/edit_tx_bg"
                android:padding="@dimen/pad_10"
                android:layout_marginTop="@dimen/pad_50">
            <in.inferon.msl.cucumbor.view.ui.BoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_91"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/colorPrimary"/>
            <in.inferon.msl.cucumbor.view.ui.BoldEditText
                    android:id="@+id/mobile_no_et"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/black"
                    android:hint="@string/mobile_number"
                    android:textColorHint="@color/gray"
                    android:inputType="number"
                    android:maxLength="10"
                    android:background="@drawable/mobileno_tx_bg"
                    android:layout_marginLeft="@dimen/pad_10"
                    android:layout_marginStart="@dimen/pad_10"/>
        </LinearLayout>

        <in.inferon.msl.cucumbor.view.ui.BoldButton
                android:id="@+id/login_bt"
                style="?attr/borderlessButtonStyle"
                android:layout_width="@dimen/pad_100"
                android:layout_height="@dimen/pad_100"
                android:text="@string/login"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/white"
                android:background="@drawable/login_bt_bg"
                android:layout_marginTop="@dimen/pad_40"
                android:layout_gravity="center"/>
    </LinearLayout>

    <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"/>
</RelativeLayout>
