<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:layout_margin="@dimen/pad_10"
        app:cardCornerRadius="@dimen/pad_10">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <in.inferon.msl.cucumbor.view.ui.BoldTextView
                android:id="@+id/title_tx"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/otp_verification"
                android:textSize="@dimen/text_18sp"
                android:textColor="@color/white"
                android:gravity="center"
                android:background="@drawable/dialog_toolbar_bg"
                android:padding="@dimen/pad_10"/>

        <in.inferon.msl.cucumbor.view.ui.BoldEditText
                android:id="@+id/otpd_otp_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/black"
                android:hint="@string/otp"
                android:textColorHint="@color/gray"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:background="@drawable/edit_tx_bg"
                android:padding="@dimen/pad_10"
                android:gravity="center"
                android:layout_margin="@dimen/pad_20"/>

        <LinearLayout
                android:id="@+id/loadingLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center"
                android:visibility="gone"
                android:layout_marginBottom="@dimen/pad_10">
            <ProgressBar
                    android:layout_width="@dimen/pad_20"
                    android:layout_height="@dimen/pad_20"/>

            <in.inferon.msl.cucumbor.view.ui.LightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verfying_otp_please_wait"
                    android:textSize="@dimen/text_12sp"
                    android:textColor="@color/colorAccent"
                    android:layout_marginLeft="@dimen/pad_10"
                    android:layout_marginStart="@dimen/pad_10"/>
        </LinearLayout>

        <in.inferon.msl.cucumbor.view.ui.BoldButton
                android:id="@+id/otpd_done_bt"
                style="?attr/borderlessButtonStyle"
                android:layout_width="@dimen/pad_100"
                android:layout_height="@dimen/pad_100"
                android:text="@string/done"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/white"
                android:background="@drawable/login_bt_bg"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/pad_10"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>