<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.activity.ConfirmActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical">
        <ImageButton
                android:id="@+id/backIB"
                style="?attr/borderlessButtonStyle"
                android:layout_width="@dimen/pad_50"
                android:layout_height="match_parent"
                android:src="@drawable/ic_keyboard_arrow_left_white_24dp"
                android:contentDescription="@string/app_name"
                android:adjustViewBounds="true"/>

        <in.inferon.msl.cucumbor.view.ui.LightTextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/order_confirmation"
                android:gravity="center_vertical"
                android:textColor="@color/white"
                android:textSize="@dimen/text_16sp"
                android:textAllCaps="true"/>
    </LinearLayout>

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/confirmGroceryRV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center_vertical"
                    android:padding="@dimen/pad_10">
                <in.inferon.msl.cucumbor.view.ui.LightTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/total"
                        android:textSize="@dimen/text_14sp"
                        android:textColor="@color/black"/>

                <in.inferon.msl.cucumbor.view.ui.BoldTextView
                        android:id="@+id/totalTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/text_16sp"
                        android:textColor="@color/colorPrimary"
                        android:layout_marginLeft="@dimen/pad_5"
                        android:layout_marginStart="@dimen/pad_5"/>
            </LinearLayout>

        <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center_vertical"
                android:padding="@dimen/pad_10">
            <in.inferon.msl.cucumbor.view.ui.LightTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_time"
                    android:textSize="@dimen/text_14sp"
                    android:textColor="@color/black"/>

            <in.inferon.msl.cucumbor.view.ui.BoldTextView
                    android:id="@+id/expectedTimeTV"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/text_16sp"
                    android:textColor="@color/colorPrimary"
                    android:gravity="center"
                    android:layout_marginLeft="@dimen/pad_5"
                    android:layout_marginStart="@dimen/pad_5"/>
        </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:gravity="center_vertical">
        <in.inferon.msl.cucumbor.view.ui.LightButton
                android:id="@+id/cancelBT"
                style="?attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/cancel"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/white"
                android:background="@drawable/dialog_ok_bt_bg"
                android:layout_weight="1"/>
        <View
                android:layout_width="@dimen/pad_1"
                android:layout_height="match_parent"
                android:background="@color/white"/>
        <in.inferon.msl.cucumbor.view.ui.LightButton
                android:id="@+id/okBT"
                style="?attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/confirm"
                android:textSize="@dimen/text_16sp"
                android:textColor="@color/white"
                android:background="@drawable/dialog_ok_bt_bg"
                android:layout_weight="1"/>
    </LinearLayout>
</LinearLayout>